--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,122 @@
+#root,
+nav,
+main,
+div.post div.headers,
+div.text,
+footer div:first-child {
+  display: flex;
+}
+
+#root,
+main,
+div.text {
+  flex-direction: column;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  gap: 80px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+main {
+  gap: 50px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  font-size: 72px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+h2 {
+  font-size: 28px;
+  margin-bottom: 30px;
 }
 
-.card {
-  padding: 2em;
+h1,
+h2,
+a.footer-link {
+  font-weight: 300;
 }
 
-.read-the-docs {
-  color: #888;
+h1,
+a.post-link,
+a.footer-link {
+  color: #d73b37;
+}
+
+nav {
+  gap: 56px;
+}
+
+a {
+  text-decoration: none;
+}
+
+a.nav-link {
+  font-size: 22px;
+  border-bottom: 2px solid #cdccdc;
+}
+
+a.nav-link,
+div.headers p,
+div.text p::first-letter {
+  color: #757575;
+}
+
+div.headers {
+  flex-direction: column-reverse;
+  margin-bottom: 12px;
+}
+
+div.headers p {
+  font-size: 26px;
+}
+
+div.post h3 {
+  font-size: 42px;
+  font-weight: 400;
+}
+
+div.post img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  margin-bottom: 20px;
+}
+
+div.post div.text {
+  gap: 24px;
+}
+
+div.post div.text p {
+  font-size: 20px;
+  font-weight: 300;
+}
+
+a.post-link {
+  width: 100%;
+  text-align: right;
+  font-size: 22px;
+  font-weight: 500;
+}
+
+div.text p::first-letter {
+  initial-letter: 4;
+  padding-right: 16px;
+}
+
+div.post {
+  padding-bottom: 20px;
+  border-bottom: 1px solid #cdccdc;
+}
+
+footer div:first-child {
+  gap: 48px;
+  margin-bottom: 10px;
+}
+
+footer > * {
+  font-size: 20px;
+}
+
+footer {
+  padding-bottom: 30px;
 }
