--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ a.footer-link {
 }
 
 nav {
-  gap: 56px;
+  column-gap: 56px;
 }
 
 a {
@@ -109,7 +109,7 @@ div.post {
 }
 
 footer div:first-child {
-  gap: 48px;
+  column-gap: 48px;
   margin-bottom: 10px;
 }
 
@@ -124,4 +124,5 @@ footer {
 nav,
 footer > div:first-child {
   flex-wrap: wrap;
+  row-gap: 20px;
 }
